<?xml version="1.0"?>
<package format="2">
  <name>redis_store</name>
  <version>0.1.0</version>
  <description>
     A package to support Redis storage for data from and to ROS.
  </description>
  <maintainer email="alexander@roessler.systems">Alexander Rössler</maintainer>
  <license>TODO</license>

  <url>TODO</url>
  <author>Alexander Rössler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>python-redis</depend>
  <depend>redis-server</depend>

  <test_depend>ros_pytest</test_depend>
  <test_depend>python-pytest-dependency-pip</test_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
  </export>
</package>
