<?xml version="1.0"?>
<package format="2">
  <name>redis_store</name>
  <version>0.1.1</version>
  <description>
    redis_store wraps up the redis datastructure store in ROS, allowing
    it to be used to store configuration parameters.
  </description>
  <maintainer email="alexander@roessler.systems">Alexander Rössler</maintainer>
  <license>TODO</license>

  <url>TODO</url>
  <author>Alexander Rössler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>python-future</depend>
  <depend>python-redis</depend>
  <depend>redis-server</depend>
  <depend>redis_store_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>ros_pytest</test_depend>
  <test_depend>python-pytest-dependency-pip</test_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
  </export>
</package>
