<?xml version="1.0"?>
<package format="2">
  <name>redis_store</name>
  <version>0.1.4</version>
  <description>
    redis_store wraps up the redis datastructure store in ROS, allowing
    it to be used to store configuration parameters.
  </description>
  <maintainer email="alexander@roessler.systems">Alexander Rössler</maintainer>
  <license>TODO</license>

  <url>TODO</url>
  <author>Alexander Rössler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>python3-redis</depend>
  <depend>redis-server</depend>
  <depend>redis_store_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>ros_pytest</test_depend>
  <!-- rosdep resolves this as `pytest-dependency`, which is a valid
       pip package, but for some reason adds it to the
       `debian/control` `Build-Depends:`.  -->
  <!-- <test_depend>python-pytest-dependency-pip</test_depend> -->

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
  </export>
</package>
